ARCHIVE20220112/y.output
Terminaux inutilisés dans la grammaire

    ACCOLADE_OUVRANTE
    ACCOLADE_FERMANTE
    CSTE_BOOLEEN
    CSTE_CHAINE
    POUR


Grammaire

    0 $accept: programme $end

    1 programme: PROG corps

    2 corps: liste_declarations liste_instructions
    3      | liste_instructions

    4 liste_declarations: declaration POINT_VIRGULE
    5                   | liste_declarations declaration POINT_VIRGULE

    6 declaration: declaration_type
    7            | declaration_variable
    8            | declaration_procedure
    9            | declaration_fonction

   10 declaration_type: TYPE IDF DEUX_POINTS STRUCT liste_champs FSTRUCT
   11                 | TYPE IDF DEUX_POINTS TABLEAU dimension DE nom_type

   12 dimension: CROCHET_OUVRANT liste_dimensions CROCHET_FERMANT

   13 liste_dimensions: une_dimension
   14                 | liste_dimensions VIRGULE une_dimension

   15 une_dimension: CSTE_ENTIERE POINT_POINT CSTE_ENTIERE

   16 liste_instructions: DEBUT suite_liste_inst FIN
   17                   | %empty

   18 suite_liste_inst: instruction POINT_VIRGULE
   19                 | suite_liste_inst instruction POINT_VIRGULE

   20 instruction: affectation
   21            | condition
   22            | tant_que
   23            | appel
   24            | RETOURNE resultat_retourne
   25            | read
   26            | write
   27            | %empty

   28 liste_champs: un_champ POINT_VIRGULE
   29             | liste_champs un_champ POINT_VIRGULE

   30 un_champ: IDF DEUX_POINTS nom_type

   31 nom_type: type_simple
   32         | IDF

   33 type_simple: ENTIER
   34            | REEL
   35            | BOOLEEN
   36            | CARACTERE
   37            | CHAINE CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

   38 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type

   39 $@1: %empty

   40 declaration_procedure: PROCEDURE $@1 IDF liste_parametres corps

   41 $@2: %empty

   42 $@3: %empty

   43 declaration_fonction: FONCTION $@2 IDF liste_parametres RETOURNE type_simple $@3 corps

   44 liste_parametres: PARENTHESE_OUVRANTE PARENTHESE_FERMANTE
   45                 | PARENTHESE_OUVRANTE liste_param PARENTHESE_FERMANTE

   46 liste_param: un_param
   47            | liste_param POINT_VIRGULE un_param

   48 un_param: IDF DEUX_POINTS type_simple

   49 resultat_retourne: %empty
   50                  | expression

   51 appel: IDF liste_arguments

   52 liste_arguments: PARENTHESE_OUVRANTE PARENTHESE_FERMANTE
   53                | PARENTHESE_OUVRANTE liste_args PARENTHESE_FERMANTE

   54 liste_args: un_arg
   55           | liste_args VIRGULE un_arg

   56 un_arg: expression

   57 condition: SI expression_booleenne ALORS liste_instructions
   58          | SI expression_booleenne ALORS liste_instructions SINON liste_instructions

   59 tant_que: TANT_QUE expression_booleenne FAIRE liste_instructions

   60 affectation: variable OPAFF expression

   61 variable: IDF
   62         | IDF tableau
   63         | IDF POINT variable
   64         | IDF tableau POINT variable

   65 tableau: CROCHET_OUVRANT rang CROCHET_FERMANT tableau
   66        | CROCHET_OUVRANT rang CROCHET_FERMANT

   67 rang: expression
   68     | rang VIRGULE expression

   69 expression: expression_arith
   70           | expression_booleenne

   71 expression_arith: expression_arith PLUS e2
   72                 | expression_arith MOINS e2
   73                 | e2

   74 e2: e2 DIV e3
   75   | e2 MULT e3
   76   | e3

   77 e3: PARENTHESE_OUVRANTE expression_arith PARENTHESE_FERMANTE
   78   | e4

   79 e4: variable
   80   | CSTE_ENTIERE
   81   | CSTE_REEL
   82   | CSTE_CARACTERE
   83   | appel

   84 expression_booleenne: b1
   85                     | PARENTHESE_OUVRANTE b1 PARENTHESE_FERMANTE

   86 b1: b1 AND b2
   87   | b2

   88 b2: b2 OR b3
   89   | b3

   90 b3: NOT b4
   91   | b4

   92 b4: comparaison
   93   | retourb

   94 comparaison: expression_arith SUPERIEUR expression_arith
   95            | expression_arith INFERIEUR expression_arith
   96            | expression_arith SUPERIEUR_OU_EGAL expression_arith
   97            | expression_arith INFERIEUR_OU_EGAL expression_arith
   98            | expression_arith EGAL expression_arith
   99            | expression_arith DIFFERENT expression_arith

  100 retourb: VRAI
  101        | FAUX

  102 liste_variables: liste_variables VIRGULE variable
  103                | variable

  104 write: ECRIRE PARENTHESE_OUVRANTE liste_formats suite_ecriture PARENTHESE_FERMANTE

  105 liste_formats: liste_formats format
  106              | format

  107 format: CHAINE

  108 suite_ecriture: VIRGULE variable suite_ecriture
  109               | VIRGULE variable

  110 read: LIRE PARENTHESE_OUVRANTE liste_variables PARENTHESE_FERMANTE


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    PROG (258) 1
    DEBUT (259) 16
    FIN (260) 16
    POINT (261) 63 64
    VIRGULE (262) 14 55 68 102 108 109
    POINT_VIRGULE (263) 4 5 18 19 28 29 47
    DEUX_POINTS (264) 10 11 30 38 48
    CROCHET_OUVRANT (265) 12 37 65 66
    CROCHET_FERMANT (266) 12 37 65 66
    POINT_POINT (267) 15
    PARENTHESE_OUVRANTE (268) 44 45 52 53 77 85 104 110
    PARENTHESE_FERMANTE (269) 44 45 52 53 77 85 104 110
    ACCOLADE_OUVRANTE (270)
    ACCOLADE_FERMANTE (271)
    TYPE (272) 10 11
    STRUCT (273) 10
    FSTRUCT (274) 10
    TABLEAU (275) 11
    DE (276) 11
    IDF <type_int> (277) 10 11 30 32 38 40 43 48 51 61 62 63 64
    ENTIER <type_int> (278) 33
    REEL <type_int> (279) 34
    BOOLEEN <type_int> (280) 35
    CARACTERE <type_int> (281) 36
    CHAINE <type_int> (282) 37 107
    CSTE_ENTIERE <type_int> (283) 15 37 80
    CSTE_CARACTERE <type_int> (284) 82
    VARIABLE (285) 38
    CSTE_REEL <type_float> (286) 81
    CSTE_BOOLEEN (287)
    CSTE_CHAINE (288)
    PROCEDURE (289) 40
    FONCTION (290) 43
    RETOURNE (291) 24 43
    SI (292) 57 58
    ALORS (293) 57 58
    SINON (294) 58
    POUR (295)
    TANT_QUE (296) 59
    FAIRE (297) 59
    OPAFF (298) 60
    PLUS (299) 71
    MOINS (300) 72
    DIV (301) 74
    MULT (302) 75
    AND (303) 86
    OR (304) 88
    NOT (305) 90
    VRAI (306) 100
    FAUX (307) 101
    SUPERIEUR (308) 94
    INFERIEUR (309) 95
    SUPERIEUR_OU_EGAL (310) 96
    INFERIEUR_OU_EGAL (311) 97
    EGAL (312) 98
    DIFFERENT (313) 99
    LIRE (314) 110
    ECRIRE (315) 104


Non-terminaux, suivis des règles où ils apparaissent

    $accept (61)
        à gauche: 0
    programme (62)
        à gauche: 1
        à droite: 0
    corps <type_arbre> (63)
        à gauche: 2 3
        à droite: 1 40 43
    liste_declarations <type_arbre> (64)
        à gauche: 4 5
        à droite: 2 5
    declaration <type_arbre> (65)
        à gauche: 6 7 8 9
        à droite: 4 5
    declaration_type <type_arbre> (66)
        à gauche: 10 11
        à droite: 6
    dimension <type_arbre> (67)
        à gauche: 12
        à droite: 11
    liste_dimensions <type_arbre> (68)
        à gauche: 13 14
        à droite: 12 14
    une_dimension <type_arbre> (69)
        à gauche: 15
        à droite: 13 14
    liste_instructions <type_arbre> (70)
        à gauche: 16 17
        à droite: 2 3 57 58 59
    suite_liste_inst <type_arbre> (71)
        à gauche: 18 19
        à droite: 16 19
    instruction <type_arbre> (72)
        à gauche: 20 21 22 23 24 25 26 27
        à droite: 18 19
    liste_champs <type_arbre> (73)
        à gauche: 28 29
        à droite: 10 29
    un_champ <type_arbre> (74)
        à gauche: 30
        à droite: 28 29
    nom_type <type_int> (75)
        à gauche: 31 32
        à droite: 11 30 38
    type_simple <type_int> (76)
        à gauche: 33 34 35 36 37
        à droite: 31 43 48
    declaration_variable <type_arbre> (77)
        à gauche: 38
        à droite: 7
    declaration_procedure <type_arbre> (78)
        à gauche: 40
        à droite: 8
    $@1 (79)
        à gauche: 39
        à droite: 40
    declaration_fonction <type_arbre> (80)
        à gauche: 43
        à droite: 9
    $@2 (81)
        à gauche: 41
        à droite: 43
    $@3 (82)
        à gauche: 42
        à droite: 43
    liste_parametres <type_arbre> (83)
        à gauche: 44 45
        à droite: 40 43
    liste_param <type_arbre> (84)
        à gauche: 46 47
        à droite: 45 47
    un_param <type_arbre> (85)
        à gauche: 48
        à droite: 46 47
    resultat_retourne <type_arbre> (86)
        à gauche: 49 50
        à droite: 24
    appel <type_arbre> (87)
        à gauche: 51
        à droite: 23 83
    liste_arguments <type_arbre> (88)
        à gauche: 52 53
        à droite: 51
    liste_args <type_arbre> (89)
        à gauche: 54 55
        à droite: 53 55
    un_arg <type_arbre> (90)
        à gauche: 56
        à droite: 54 55
    condition <type_arbre> (91)
        à gauche: 57 58
        à droite: 21
    tant_que <type_arbre> (92)
        à gauche: 59
        à droite: 22
    affectation <type_arbre> (93)
        à gauche: 60
        à droite: 20
    variable <type_arbre> (94)
        à gauche: 61 62 63 64
        à droite: 60 63 64 79 102 103 108 109
    tableau <type_arbre> (95)
        à gauche: 65 66
        à droite: 62 64 65
    rang <type_arbre> (96)
        à gauche: 67 68
        à droite: 65 66 68
    expression <type_arbre> (97)
        à gauche: 69 70
        à droite: 50 56 60 67 68
    expression_arith <type_arbre> (98)
        à gauche: 71 72 73
        à droite: 69 71 72 77 94 95 96 97 98 99
    e2 <type_arbre> (99)
        à gauche: 74 75 76
        à droite: 71 72 73 74 75
    e3 <type_arbre> (100)
        à gauche: 77 78
        à droite: 74 75 76
    e4 <type_arbre> (101)
        à gauche: 79 80 81 82 83
        à droite: 78
    expression_booleenne <type_arbre> (102)
        à gauche: 84 85
        à droite: 57 58 59 70
    b1 <type_arbre> (103)
        à gauche: 86 87
        à droite: 84 85 86
    b2 <type_arbre> (104)
        à gauche: 88 89
        à droite: 86 87 88
    b3 <type_arbre> (105)
        à gauche: 90 91
        à droite: 88 89
    b4 <type_arbre> (106)
        à gauche: 92 93
        à droite: 90 91
    comparaison <type_arbre> (107)
        à gauche: 94 95 96 97 98 99
        à droite: 92
    retourb <type_arbre> (108)
        à gauche: 100 101
        à droite: 93
    liste_variables <type_arbre> (109)
        à gauche: 102 103
        à droite: 102 110
    write <type_arbre> (110)
        à gauche: 104
        à droite: 26
    liste_formats <type_arbre> (111)
        à gauche: 105 106
        à droite: 104 105
    format <type_arbre> (112)
        à gauche: 107
        à droite: 105 106
    suite_ecriture <type_arbre> (113)
        à gauche: 108 109
        à droite: 104 108
    read <type_arbre> (114)
        à gauche: 110
        à droite: 25


État 0

    0 $accept: . programme $end

    PROG  décalage et aller à l'état 1

    programme  aller à l'état 2


État 1

    1 programme: PROG . corps

    DEBUT      décalage et aller à l'état 3
    TYPE       décalage et aller à l'état 4
    VARIABLE   décalage et aller à l'état 5
    PROCEDURE  décalage et aller à l'état 6
    FONCTION   décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 17 (liste_instructions)

    corps                  aller à l'état 8
    liste_declarations     aller à l'état 9
    declaration            aller à l'état 10
    declaration_type       aller à l'état 11
    liste_instructions     aller à l'état 12
    declaration_variable   aller à l'état 13
    declaration_procedure  aller à l'état 14
    declaration_fonction   aller à l'état 15


État 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 16


État 3

   16 liste_instructions: DEBUT . suite_liste_inst FIN

    IDF       décalage et aller à l'état 17
    RETOURNE  décalage et aller à l'état 18
    SI        décalage et aller à l'état 19
    TANT_QUE  décalage et aller à l'état 20
    LIRE      décalage et aller à l'état 21
    ECRIRE    décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 27 (instruction)

    suite_liste_inst  aller à l'état 23
    instruction       aller à l'état 24
    appel             aller à l'état 25
    condition         aller à l'état 26
    tant_que          aller à l'état 27
    affectation       aller à l'état 28
    variable          aller à l'état 29
    write             aller à l'état 30
    read              aller à l'état 31


État 4

   10 declaration_type: TYPE . IDF DEUX_POINTS STRUCT liste_champs FSTRUCT
   11                 | TYPE . IDF DEUX_POINTS TABLEAU dimension DE nom_type

    IDF  décalage et aller à l'état 32


État 5

   38 declaration_variable: VARIABLE . IDF DEUX_POINTS nom_type

    IDF  décalage et aller à l'état 33


État 6

   40 declaration_procedure: PROCEDURE . $@1 IDF liste_parametres corps

    $défaut  réduction par utilisation de la règle 39 ($@1)

    $@1  aller à l'état 34


État 7

   43 declaration_fonction: FONCTION . $@2 IDF liste_parametres RETOURNE type_simple $@3 corps

    $défaut  réduction par utilisation de la règle 41 ($@2)

    $@2  aller à l'état 35


État 8

    1 programme: PROG corps .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 9

    2 corps: liste_declarations . liste_instructions
    5 liste_declarations: liste_declarations . declaration POINT_VIRGULE

    DEBUT      décalage et aller à l'état 3
    TYPE       décalage et aller à l'état 4
    VARIABLE   décalage et aller à l'état 5
    PROCEDURE  décalage et aller à l'état 6
    FONCTION   décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 17 (liste_instructions)

    declaration            aller à l'état 36
    declaration_type       aller à l'état 11
    liste_instructions     aller à l'état 37
    declaration_variable   aller à l'état 13
    declaration_procedure  aller à l'état 14
    declaration_fonction   aller à l'état 15


État 10

    4 liste_declarations: declaration . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 38


État 11

    6 declaration: declaration_type .

    $défaut  réduction par utilisation de la règle 6 (declaration)


État 12

    3 corps: liste_instructions .

    $défaut  réduction par utilisation de la règle 3 (corps)


État 13

    7 declaration: declaration_variable .

    $défaut  réduction par utilisation de la règle 7 (declaration)


État 14

    8 declaration: declaration_procedure .

    $défaut  réduction par utilisation de la règle 8 (declaration)


État 15

    9 declaration: declaration_fonction .

    $défaut  réduction par utilisation de la règle 9 (declaration)


État 16

    0 $accept: programme $end .

    $défaut  accepter


État 17

   51 appel: IDF . liste_arguments
   61 variable: IDF .
   62         | IDF . tableau
   63         | IDF . POINT variable
   64         | IDF . tableau POINT variable

    POINT                décalage et aller à l'état 39
    CROCHET_OUVRANT      décalage et aller à l'état 40
    PARENTHESE_OUVRANTE  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 61 (variable)

    liste_arguments  aller à l'état 42
    tableau          aller à l'état 43


État 18

   24 instruction: RETOURNE . resultat_retourne

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 49 (resultat_retourne)

    resultat_retourne     aller à l'état 51
    appel                 aller à l'état 52
    variable              aller à l'état 53
    expression            aller à l'état 54
    expression_arith      aller à l'état 55
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 59
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 19

   57 condition: SI . expression_booleenne ALORS liste_instructions
   58          | SI . expression_booleenne ALORS liste_instructions SINON liste_instructions

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel                 aller à l'état 52
    variable              aller à l'état 53
    expression_arith      aller à l'état 66
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 67
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 20

   59 tant_que: TANT_QUE . expression_booleenne FAIRE liste_instructions

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel                 aller à l'état 52
    variable              aller à l'état 53
    expression_arith      aller à l'état 66
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 68
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 21

  110 read: LIRE . PARENTHESE_OUVRANTE liste_variables PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 69


État 22

  104 write: ECRIRE . PARENTHESE_OUVRANTE liste_formats suite_ecriture PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 70


État 23

   16 liste_instructions: DEBUT suite_liste_inst . FIN
   19 suite_liste_inst: suite_liste_inst . instruction POINT_VIRGULE

    FIN       décalage et aller à l'état 71
    IDF       décalage et aller à l'état 17
    RETOURNE  décalage et aller à l'état 18
    SI        décalage et aller à l'état 19
    TANT_QUE  décalage et aller à l'état 20
    LIRE      décalage et aller à l'état 21
    ECRIRE    décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 27 (instruction)

    instruction  aller à l'état 72
    appel        aller à l'état 25
    condition    aller à l'état 26
    tant_que     aller à l'état 27
    affectation  aller à l'état 28
    variable     aller à l'état 29
    write        aller à l'état 30
    read         aller à l'état 31


État 24

   18 suite_liste_inst: instruction . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 73


État 25

   23 instruction: appel .

    $défaut  réduction par utilisation de la règle 23 (instruction)


État 26

   21 instruction: condition .

    $défaut  réduction par utilisation de la règle 21 (instruction)


État 27

   22 instruction: tant_que .

    $défaut  réduction par utilisation de la règle 22 (instruction)


État 28

   20 instruction: affectation .

    $défaut  réduction par utilisation de la règle 20 (instruction)


État 29

   60 affectation: variable . OPAFF expression

    OPAFF  décalage et aller à l'état 74


État 30

   26 instruction: write .

    $défaut  réduction par utilisation de la règle 26 (instruction)


État 31

   25 instruction: read .

    $défaut  réduction par utilisation de la règle 25 (instruction)


État 32

   10 declaration_type: TYPE IDF . DEUX_POINTS STRUCT liste_champs FSTRUCT
   11                 | TYPE IDF . DEUX_POINTS TABLEAU dimension DE nom_type

    DEUX_POINTS  décalage et aller à l'état 75


État 33

   38 declaration_variable: VARIABLE IDF . DEUX_POINTS nom_type

    DEUX_POINTS  décalage et aller à l'état 76


État 34

   40 declaration_procedure: PROCEDURE $@1 . IDF liste_parametres corps

    IDF  décalage et aller à l'état 77


État 35

   43 declaration_fonction: FONCTION $@2 . IDF liste_parametres RETOURNE type_simple $@3 corps

    IDF  décalage et aller à l'état 78


État 36

    5 liste_declarations: liste_declarations declaration . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 79


État 37

    2 corps: liste_declarations liste_instructions .

    $défaut  réduction par utilisation de la règle 2 (corps)


État 38

    4 liste_declarations: declaration POINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 4 (liste_declarations)


État 39

   63 variable: IDF POINT . variable

    IDF  décalage et aller à l'état 80

    variable  aller à l'état 81


État 40

   65 tableau: CROCHET_OUVRANT . rang CROCHET_FERMANT tableau
   66        | CROCHET_OUVRANT . rang CROCHET_FERMANT

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel                 aller à l'état 52
    variable              aller à l'état 53
    rang                  aller à l'état 82
    expression            aller à l'état 83
    expression_arith      aller à l'état 55
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 59
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 41

   52 liste_arguments: PARENTHESE_OUVRANTE . PARENTHESE_FERMANTE
   53                | PARENTHESE_OUVRANTE . liste_args PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    PARENTHESE_FERMANTE  décalage et aller à l'état 84
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel                 aller à l'état 52
    liste_args            aller à l'état 85
    un_arg                aller à l'état 86
    variable              aller à l'état 53
    expression            aller à l'état 87
    expression_arith      aller à l'état 55
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 59
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 42

   51 appel: IDF liste_arguments .

    $défaut  réduction par utilisation de la règle 51 (appel)


État 43

   62 variable: IDF tableau .
   64         | IDF tableau . POINT variable

    POINT  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 62 (variable)


État 44

   77 e3: PARENTHESE_OUVRANTE . expression_arith PARENTHESE_FERMANTE
   85 expression_booleenne: PARENTHESE_OUVRANTE . b1 PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 89
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel             aller à l'état 52
    variable          aller à l'état 53
    expression_arith  aller à l'état 90
    e2                aller à l'état 56
    e3                aller à l'état 57
    e4                aller à l'état 58
    b1                aller à l'état 91
    b2                aller à l'état 61
    b3                aller à l'état 62
    b4                aller à l'état 63
    comparaison       aller à l'état 64
    retourb           aller à l'état 65


État 45

   80 e4: CSTE_ENTIERE .

    $défaut  réduction par utilisation de la règle 80 (e4)


État 46

   82 e4: CSTE_CARACTERE .

    $défaut  réduction par utilisation de la règle 82 (e4)


État 47

   81 e4: CSTE_REEL .

    $défaut  réduction par utilisation de la règle 81 (e4)


État 48

   90 b3: NOT . b4

    PARENTHESE_OUVRANTE  décalage et aller à l'état 89
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel             aller à l'état 52
    variable          aller à l'état 53
    expression_arith  aller à l'état 66
    e2                aller à l'état 56
    e3                aller à l'état 57
    e4                aller à l'état 58
    b4                aller à l'état 92
    comparaison       aller à l'état 64
    retourb           aller à l'état 65


État 49

  100 retourb: VRAI .

    $défaut  réduction par utilisation de la règle 100 (retourb)


État 50

  101 retourb: FAUX .

    $défaut  réduction par utilisation de la règle 101 (retourb)


État 51

   24 instruction: RETOURNE resultat_retourne .

    $défaut  réduction par utilisation de la règle 24 (instruction)


État 52

   83 e4: appel .

    $défaut  réduction par utilisation de la règle 83 (e4)


État 53

   79 e4: variable .

    $défaut  réduction par utilisation de la règle 79 (e4)


État 54

   50 resultat_retourne: expression .

    $défaut  réduction par utilisation de la règle 50 (resultat_retourne)


État 55

   69 expression: expression_arith .
   71 expression_arith: expression_arith . PLUS e2
   72                 | expression_arith . MOINS e2
   94 comparaison: expression_arith . SUPERIEUR expression_arith
   95            | expression_arith . INFERIEUR expression_arith
   96            | expression_arith . SUPERIEUR_OU_EGAL expression_arith
   97            | expression_arith . INFERIEUR_OU_EGAL expression_arith
   98            | expression_arith . EGAL expression_arith
   99            | expression_arith . DIFFERENT expression_arith

    PLUS               décalage et aller à l'état 93
    MOINS              décalage et aller à l'état 94
    SUPERIEUR          décalage et aller à l'état 95
    INFERIEUR          décalage et aller à l'état 96
    SUPERIEUR_OU_EGAL  décalage et aller à l'état 97
    INFERIEUR_OU_EGAL  décalage et aller à l'état 98
    EGAL               décalage et aller à l'état 99
    DIFFERENT          décalage et aller à l'état 100

    $défaut  réduction par utilisation de la règle 69 (expression)


État 56

   73 expression_arith: e2 .
   74 e2: e2 . DIV e3
   75   | e2 . MULT e3

    DIV   décalage et aller à l'état 101
    MULT  décalage et aller à l'état 102

    $défaut  réduction par utilisation de la règle 73 (expression_arith)


État 57

   76 e2: e3 .

    $défaut  réduction par utilisation de la règle 76 (e2)


État 58

   78 e3: e4 .

    $défaut  réduction par utilisation de la règle 78 (e3)


État 59

   70 expression: expression_booleenne .

    $défaut  réduction par utilisation de la règle 70 (expression)


État 60

   84 expression_booleenne: b1 .
   86 b1: b1 . AND b2

    AND  décalage et aller à l'état 103

    $défaut  réduction par utilisation de la règle 84 (expression_booleenne)


État 61

   87 b1: b2 .
   88 b2: b2 . OR b3

    OR  décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 87 (b1)


État 62

   89 b2: b3 .

    $défaut  réduction par utilisation de la règle 89 (b2)


État 63

   91 b3: b4 .

    $défaut  réduction par utilisation de la règle 91 (b3)


État 64

   92 b4: comparaison .

    $défaut  réduction par utilisation de la règle 92 (b4)


État 65

   93 b4: retourb .

    $défaut  réduction par utilisation de la règle 93 (b4)


État 66

   71 expression_arith: expression_arith . PLUS e2
   72                 | expression_arith . MOINS e2
   94 comparaison: expression_arith . SUPERIEUR expression_arith
   95            | expression_arith . INFERIEUR expression_arith
   96            | expression_arith . SUPERIEUR_OU_EGAL expression_arith
   97            | expression_arith . INFERIEUR_OU_EGAL expression_arith
   98            | expression_arith . EGAL expression_arith
   99            | expression_arith . DIFFERENT expression_arith

    PLUS               décalage et aller à l'état 93
    MOINS              décalage et aller à l'état 94
    SUPERIEUR          décalage et aller à l'état 95
    INFERIEUR          décalage et aller à l'état 96
    SUPERIEUR_OU_EGAL  décalage et aller à l'état 97
    INFERIEUR_OU_EGAL  décalage et aller à l'état 98
    EGAL               décalage et aller à l'état 99
    DIFFERENT          décalage et aller à l'état 100


État 67

   57 condition: SI expression_booleenne . ALORS liste_instructions
   58          | SI expression_booleenne . ALORS liste_instructions SINON liste_instructions

    ALORS  décalage et aller à l'état 105


État 68

   59 tant_que: TANT_QUE expression_booleenne . FAIRE liste_instructions

    FAIRE  décalage et aller à l'état 106


État 69

  110 read: LIRE PARENTHESE_OUVRANTE . liste_variables PARENTHESE_FERMANTE

    IDF  décalage et aller à l'état 80

    variable         aller à l'état 107
    liste_variables  aller à l'état 108


État 70

  104 write: ECRIRE PARENTHESE_OUVRANTE . liste_formats suite_ecriture PARENTHESE_FERMANTE

    CHAINE  décalage et aller à l'état 109

    liste_formats  aller à l'état 110
    format         aller à l'état 111


État 71

   16 liste_instructions: DEBUT suite_liste_inst FIN .

    $défaut  réduction par utilisation de la règle 16 (liste_instructions)


État 72

   19 suite_liste_inst: suite_liste_inst instruction . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 112


État 73

   18 suite_liste_inst: instruction POINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 18 (suite_liste_inst)


État 74

   60 affectation: variable OPAFF . expression

    PARENTHESE_OUVRANTE  décalage et aller à l'état 44
    IDF                  décalage et aller à l'état 17
    CSTE_ENTIERE         décalage et aller à l'état 45
    CSTE_CARACTERE       décalage et aller à l'état 46
    CSTE_REEL            décalage et aller à l'état 47
    NOT                  décalage et aller à l'état 48
    VRAI                 décalage et aller à l'état 49
    FAUX                 décalage et aller à l'état 50

    appel                 aller à l'état 52
    variable              aller à l'état 53
    expression            aller à l'état 113
    expression_arith      aller à l'état 55
    e2                    aller à l'état 56
    e3                    aller à l'état 57
    e4                    aller à l'état 58
    expression_booleenne  aller à l'état 59
    b1                    aller à l'état 60
    b2                    aller à l'état 61
    b3                    aller à l'état 62
    b4                    aller à l'état 63
    comparaison           aller à l'état 64
    retourb               aller à l'état 65


État 75

   10 declaration_type: TYPE IDF DEUX_POINTS . STRUCT liste_champs FSTRUCT
   11                 | TYPE IDF DEUX_POINTS . TABLEAU dimension DE nom_type

    STRUCT   décalage et aller à l'état 114
    TABLEAU  décalage et aller à l'état 115


État 76

   38 declaration_variable: VARIABLE IDF DEUX_POINTS . nom_type

    IDF        décalage et aller à l'état 116
    ENTIER     décalage et aller à l'état 117
    REEL       décalage et aller à l'état 118
    BOOLEEN    décalage et aller à l'état 119
    CARACTERE  décalage et aller à l'état 120
    CHAINE     décalage et aller à l'état 121

    nom_type     aller à l'état 122
    type_simple  aller à l'état 123


État 77

   40 declaration_procedure: PROCEDURE $@1 IDF . liste_parametres corps

    PARENTHESE_OUVRANTE  décalage et aller à l'état 124

    liste_parametres  aller à l'état 125


État 78

   43 declaration_fonction: FONCTION $@2 IDF . liste_parametres RETOURNE type_simple $@3 corps

    PARENTHESE_OUVRANTE  décalage et aller à l'état 124

    liste_parametres  aller à l'état 126


État 79
